[ADD] Update stuffs for project

--- a/sources/Views/templates/idcard.html
+++ b/sources/Views/templates/idcard.html
@@ -62,7 +62,7 @@
                     <span class="tooltip">About</span>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact">
                         <i class='bx bxs-contact' ></i>
                         <span class="links-name">Contact</span>
                     </a>
