--- a/sources/Views/templates/ekyc.html
+++ b/sources/Views/templates/ekyc.html
@@ -61,7 +61,7 @@
                     <span class="tooltip">About</span>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact">
                         <i class='bx bxs-contact' ></i>
                         <span class="links-name">Contact</span>
                     </a>
@@ -111,7 +111,7 @@
                     <div class="drag-area">
                             <!-- <button id='close'>close</button>    -->
                         <div class="icon">
-                            <i class="fas fa-id-card"></i>
+                            <i class='fas fa-file-contract' style='font-size:24px'></i>
                         </div>
                         <span class="header">Drag & Drop</span>
                         <span class="header">or <span class="button">Click here to browse</span></span>
