--- a/sources/Views/templates/feedback.html
+++ b/sources/Views/templates/feedback.html
@@ -11,6 +11,7 @@
     <!-- <link href='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js' rel='stylesheet'> -->
     <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css ' rel='stylesheet'>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="sweetalert2.all.min.js"></script> -->
     <link href="{{ url_for('static', path='css/feedback.css') }}" rel="stylesheet">
@@ -65,7 +66,7 @@
                 <span class="tooltip">About</span>
             </li>
             <li>
-                <a href="#">
+                <a href="contact">
                     <i class='bx bxs-contact' ></i>
                     <span class="links-name">Contact</span>
                 </a>
@@ -75,7 +76,7 @@
         <div class="profile-content">
             <div class="profile">
                 <div class="profile-details">
-                    <img src="static/profiles/profile.jpg" alt="">
+                    <img src="static/assets/profiles/profile.jpg" alt="">
                     <div class="name-job">
                         <div class="name">Nguyen Thanh Vuong</div>
                         <div class="job">Computer Science</div>
@@ -97,11 +98,11 @@
             <h6 class="mb-0">Your feedback help us to improve.</h6>
             <small class="px-3">Please let us know about your services experience.</small>
             <div class="d-flex flex-row justify-content-center mt-2">
-              <img src="https://img.icons8.com/emoji/48/000000/angry-face-emoji--v2.png" class="icon"/>
-              <img src="https://img.icons8.com/fluent/48/000000/sad.png" class="icon"/>
-              <img src="https://img.icons8.com/color/48/000000/happy.png" class="icon"/>
-              <img src="https://img.icons8.com/emoji/48/000000/smiling-face.png" class="icon"/>
-              <img src="https://img.icons8.com/color/48/000000/lol.png" class="icon"/>
+              <img src="https://img.icons8.com/emoji/48/000000/angry-face-emoji--v2.png" class="icon" id="1"/>
+              <img src="https://img.icons8.com/fluent/48/000000/sad.png" class="icon" id="2"/>
+              <img src="https://img.icons8.com/color/48/000000/happy.png" class="icon" id="3"/>
+              <img src="https://img.icons8.com/emoji/48/000000/smiling-face.png" class="icon" id="4"/>
+              <img src="https://img.icons8.com/color/48/000000/lol.png" class="icon" id="5"/>
             </div>
             <form class="feedbackForm">
             <div class="form-group mt-4">
